Documentation improvements; Formatting improvements